[gd_scene load_steps=7 format=3 uid="uid://2rsvspeeiv5n"]

[ext_resource type="Script" path="res://Scripts/Components/Projectile.gd" id="1_duoo3"]
[ext_resource type="Texture2D" uid="uid://dmarndijwi86p" path="res://Art/Particles/PlayerProjectile.png" id="2_rha6k"]
[ext_resource type="Texture2D" uid="uid://cqjisdopo21l5" path="res://Art/Particles/EnemyProjectile.png" id="3_hnnx5"]
[ext_resource type="Texture2D" uid="uid://bxqt0i7ardjr8" path="res://Art/Particles/saw-blade-without-trail-smaller.png" id="4_2q3r6"]
[ext_resource type="PackedScene" uid="uid://cptudld2heq8h" path="res://Scenes/Components/HurtboxComponent.tscn" id="4_38uwm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l61qw"]
radius = 4.0

[node name="Projectile" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_duoo3")
Player_projectile_texture = ExtResource("2_rha6k")
Enemy_projectile_texture = ExtResource("3_hnnx5")
Boss_projectile_texture = ExtResource("4_2q3r6")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ProjectileCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l61qw")

[node name="ProjectileHurtbox" parent="." instance=ExtResource("4_38uwm")]
collision_layer = 0
collision_mask = 0

[node name="ProjectileCollisionHurt" type="CollisionShape2D" parent="ProjectileHurtbox"]
shape = SubResource("CircleShape2D_l61qw")

[connection signal="hit" from="ProjectileHurtbox" to="." method="_on_projectile_hurtbox_hit"]
