[gd_scene load_steps=6 format=3 uid="uid://dfhn50kk4srv8"]

[ext_resource type="Script" path="res://Scripts/Components/Projectile.gd" id="1_o2dhk"]
[ext_resource type="Texture2D" uid="uid://basjdc4wsgt0y" path="res://Art/particles/bullet.png" id="2_3law0"]
[ext_resource type="Texture2D" uid="uid://b4w3bfekj5aww" path="res://Art/particles/bullet2.png" id="3_klw1x"]
[ext_resource type="PackedScene" uid="uid://cusqbl0whlfcq" path="res://Scenes/Components/hurtbox_component.tscn" id="4_0ni5l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bpogd"]
radius = 5.09902

[node name="Projectile" type="CharacterBody2D"]
collision_layer = 48
collision_mask = 66
script = ExtResource("1_o2dhk")
player_projectile_texture = ExtResource("2_3law0")
enemy_projectile_texture = ExtResource("3_klw1x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bpogd")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="HurtboxComponent" parent="." instance=ExtResource("4_0ni5l")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_bpogd")
